# credit-risk-ifrs-9-lab

./: .gitignore  README.md  pyproject.toml
data/: README.md
docs/: dirichlet_markov_credit_bridge.md  econometric_extensions.md  methodology_notes.md  portfolio_story.md  regulatory_scope.md
examples/: run_lab_demo.py
model_validation_pack/: README.md  pyproject.toml
model_validation_pack/examples/: run_validation_demo.py
model_validation_pack/src/model_validation_pack/: __init__.py  api.py  backtest.py  benchmark.py  credit_adapter.py  drift.py  memo.py  sensitivity.py  stability.py  types.py
model_validation_pack/templates/: validation_memo.md
model_validation_pack/tests/: test_model_validation_pack.py
notebooks/: credit_risk_ifrs9_walkthrough.ipynb  econometric_toolbox_walkthrough.ipynb
reports/: credit_risk_lab_walkthrough.md
src/credit_risk_lab/: __init__.py  challenger.py  ecl.py  models.py  monitoring.py  portfolio.py  reporting.py  survival.py
src/credit_risk_lab/econometrics/: __init__.py  calibration.py  causal.py  continuous_state.py  continuous_time.py  duration.py  forward_hazard.py  heterogeneity.py  limited_dep.py  macro.py  markov.py  measurement_error.py  model_selection.py  panel.py
tests/: test_credit_risk_lab.py  test_econometric_extensions.py  test_markov_econometrics.py
